--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -17,12 +17,20 @@
    <ul>
       <li>Paulo de Tarso</li>
       <li>Matheus Emanuel</li>
-      <li>Pedro Gauch</li>
+      <li><a href="#segundo_parágrafo">Segundo parágrafo</a></li>
    </ul>
 
    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
 
    <div><img src="photo-1542831371-29b0f74f9713.jpeg" alt=""></div>
+
+   <a href="https://github.com/CarlosCostaJr" target="_blank">meu linkedIn</a>
+<div>
+   <p>sdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasld <br> kgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçs <br> lgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslk</p>
+</div> 
+   <br><br>
+   <p id="segundo_parágrafo">
+      sdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslksdasfoasfpdsfalçksdjgçlsakgjaçlsgjaçslgjasçlgasldkgjalsdkgjasdlgjkaslk</p>
 </body>
 
 </html>
